--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -43,13 +43,35 @@ body {
 }
 
 .photo {
-  
+  margin-bottom: 2em;
 }
 
 .bio-text {
   white-space: pre-wrap; 
 }
 
+.copyright {
+  text-align: center;
+  font-size: 0.6em;
+}
+
+.shade {
+  display: flex;
+  position: absolute;
+  z-index: 1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: rgba(206, 206, 206, 0.6);
+  /* box-shadow: -2px -13px 22px 11px rgb(128, 128, 128, 0.81), 2px 13px 22px 11px rgb(128, 128, 128, 0.81); */
+  color: rgb(25, 25, 25, 0.77);
+  box-shadow: 0px 0px 8px 5px rgba(206, 206, 206, 0.6);
+}
 
 
 @media (min-width: 576px) {
@@ -80,34 +102,23 @@ body {
 
   .portfolio-picture {
     position: relative;
-    margin-bottom: 2em;
+    margin-bottom: 5em;
   }
   
   .shade {
-    display: flex;
-    position: absolute;
-    z-index: 1;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    transition: 0.3s;
-    color: rgba(128, 128, 128, 0);
+    transition: 0.5s;
+    
+    /* border: 1px solid rgb(128, 128, 128, 0.81); */
+    
     /* background: rgba(128, 128, 128, 0.81); */
     /* box-shadow: 0px -13px 22px 11px rgb(128, 128, 128, 0.81), 0px 13px 22px 11px rgb(128, 128, 128, 0.81); */
     /* color: rgb(25, 25, 25, 0.77); */
   }
 
   .shade:hover {
-    background: rgba(128, 128, 128, 0.81);
-    /* box-shadow: -2px -13px 22px 11px rgb(128, 128, 128, 0.81), 2px 13px 22px 11px rgb(128, 128, 128, 0.81); */
-    color: rgb(25, 25, 25, 0.77);
-    box-shadow: 0px 0px 8px 5px rgba(128, 128, 128, 0.6);
-    /* border: 1px solid rgb(128, 128, 128, 0.81); */
+    color: rgba(128, 128, 128, 0);
+    background: rgba(128, 128, 128, 0);
+    box-shadow: 0px 0px 8px 5px rgba(128, 128, 128, 0);
   }
   
   
