--- a/templates/front/base.html.twig
+++ b/templates/front/base.html.twig
@@ -23,44 +23,57 @@
     </head>
     <body>
         {% set route_name = app.request.attributes.get('_route') %}
-        <div class="front">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="{{ path('front_home')}}">Accueil</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                    <div class="dropdown">
-                        <a class="btn btn-secondary dropdown-toggle" href="{{ path('portfolio_browse')}}" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Collections
-                        </a>
-
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">                                                
-                            {% for album in albums.getCollections %}
-                                <a class="dropdown-item nav-link" href="{{ path('front_portfolio_read', {'id': album.id})}}">{{ album.name }}</a>
-                            {% endfor %}
-                        </div>
-
-                    </div>
-                    <a class="nav-link {% if route_name == "front_biography_read" %} active {% endif %}" href="{{ path('front_biography_read') }}">Biographie</a>
-                    <a class="nav-link {% if route_name == "front_contact" %} active {% endif %}" href="{{ path('front_contact') }}">Contact</a>
-
-                    <a class="insta-logo" href="https://www.instagram.com/romain_114/"><svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg></a>
-                    
-                    
-                </div>
-            </nav>        
+        <body class="front">
+            <header>
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" href="{{ path('front_home')}}">Accueil</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                        <div class="dropdown">
+                            <a class="btn btn-secondary dropdown-toggle" href="{{ path('portfolio_browse')}}" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Collections
+                            </a>
     
-            <div class="container-fluid container-lg">
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">                                                
+                                {% for album in albums.getCollections %}
+                                    <a class="dropdown-item nav-link" href="{{ path('front_portfolio_read', {'id': album.id})}}">{{ album.name }}</a>
+                                {% endfor %}
+                            </div>
+    
+                        </div>
+                        <a class="nav-link {% if route_name == "front_biography_read" %} active {% endif %}" href="{{ path('front_biography_read') }}">Biographie</a>
+                        <a class="nav-link {% if route_name == "front_contact" %} active {% endif %}" href="{{ path('front_contact') }}">Contact</a>
+    
+                        <a class="insta-logo" href="https://www.instagram.com/romain_114/"><svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg></a>
+                        
+                        
+                    </div>
+                </nav> 
+            </header>       
+    
+            <main class="container-fluid container-lg">
                 
                 <div class="front-body">
                     {% include 'flash_messages.html.twig' %}
 
                     {% block body %}{% endblock %}
                 </div>
-            </div>
-        </div>
+            </main>
+
+
+            <footer>
+                <p class="copyright">
+                    &copy; Copyright 2021. Tous droits réservés, reproduction interdite
+                </p>
+                <p><a href="">Plan du site</a></p>
+            </footer>
+
+        </body>
+
+        
 
         {# Bootstrap 4.6 JS #}
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
