--- a/templates/front/main/index.html.twig
+++ b/templates/front/main/index.html.twig
@@ -16,7 +16,7 @@
 {% for portfolio in portfolios %}
   <a href="{{ path('front_portfolio_read', {'id': portfolio.id}) }}" >
     <div class="portfolio-picture">
-      <img class="card-img-top photo" src="{{ asset(portfolio.picture) }}" alt="Card image cap">
+      <img class="card-img-top" src="{{ asset(portfolio.picture) }}" alt="Card image cap">
       <div class="shade">
         <h2>
           {{ portfolio.name }}
